# urlshorter

./: .env  .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  run.sh  test.sh
scripts/sql/: truncate_tables.sql
settings/: dev.toml  prod.toml  test.toml
src/: lib.rs  main.rs
src/client/: database.rs  http.rs  mod.rs  redis.rs  redis_cluster.rs
src/configure/: db.rs  env.rs  http.rs  mod.rs  redis.rs  redis_cluster.rs  secret.rs  server.rs  tracing.rs
src/constant/: mod.rs
src/dto/: mod.rs  request.rs  response.rs
src/entities/: clients.rs  mod.rs  tags.rs  urls.rs
src/entity/: mod.rs  rela.rs  tags.rs  urls.rs
src/error/: mod.rs
src/handler/: mod.rs  openapi.rs  server.rs  tags.rs  token.rs  urls.rs
src/migration/: m20220101_000001_create_table.rs  mod.rs
src/repo/: clients.rs  mod.rs  rela.rs  tags.rs  urls.rs
src/router/: mod.rs  server.rs  tags.rs  token.rs  url.rs
src/server/: mod.rs  state.rs
src/service/: mod.rs  redis.rs  session.rs  tags.rs  token.rs  url.rs
src/utils/: claim.rs  dir.rs  key.rs  mod.rs  random.rs
