[package]
name = "urlshorter"
version = "0.1.0"
edition = "2021"
authors = ["Wenyun.dang<dangwy@gmail.com>"]
description = "urlshorter built with Rust language"
homepage = "https://github.com/dangwy/urlshorter"
keywords = ["web", "api", "rest","orm"]
license = "MIT"
repository = "https://github.com/dangwy/urlshorter"

[[bin]]
name = "app"
path = "./src/bin/app.rs"

[[bin]]
name = "migration"
path = "./src/bin/migration.rs"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
axum = { version = "0.7.5", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
log = "0.4.21"
log-derive = "0.4.1"
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }
tracing-appender = "0.2.3"
tracing-bunyan-formatter = "0.3.9"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
strum = { version = "0.26.2", features = ["derive"] }
utoipa = { version = "4.2.3", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
thiserror = "1.0.59"
garde = { version = "0.18.0", features = ["full"] }
sea-orm = { version = "0.12.15", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
tokio-tungstenite = "0.21.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.2", features = ["json", "multipart", "stream"] }
redis = { version = "0.25.4", features = ["cluster", "json", "tokio-comp","aio", "async-std-comp"] }
config = "0.14.0"
lettre = { version = "0.11.6", features = ["tokio1-native-tls", "builder"] }
tera = "1.19.1"
anyhow = "1.0.81"
base62 = "2.0.2"
base64 = "0.22.0"
once_cell = "1.19.0"
http = "1.1.0"
test-context = "0.3.0"
fake = { version = "2.9.2", features = ["derive", "uuid", "chrono"] }
chrono = "0.4.38"
async-trait = "0.1.80"
openssl = "0.10.64"
rand = "0.8.5"